--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -24,14 +24,15 @@
 
             </div>
             <div class="data">
-                <div class="search-line">
+                <form method="post" class="search-line">
                     <input type="text" placeholder="Поиск">
-                    <button id="search_button">
+                    <button id="search_button" type="submit">
                         <span class="material-symbols-outlined">
                             search
                         </span>
                     </button>
-                </div>
+                    {% csrf_token %}
+                </form>
                 <div class="data-block">
                     {% block content %}
                     {% endblock %}
