--- a/static/css/base/base.css
+++ b/static/css/base/base.css
@@ -62,6 +62,47 @@ body {
         height: 60px;
         background-color: rgb(105, 209, 137);
         border-radius: 10px;
+        display: grid;
+        grid-template-columns: 33% 34% 33%;
+    }
+
+    .site-title {
+        height: 60px;
+        display: flex;
+        align-items: center;
+        margin-left: 1rem;
+    }
+
+    .site-title > a {
+        background-color: #277e41;
+        border-radius: 10px;
+        margin: 0;
+        padding: 0.5rem 2rem;
+        font-size: 20px;
+        color: white;
+    }
+
+    .login-block {
+        display: flex;
+        align-items: center;
+        justify-content: end;
+    }
+
+    .login-block > a {
+        background-color: #277e41;
+        border-radius: 10px;
+        margin: 0;
+        padding: 0.5rem 2rem;
+        font-size: 20px;
+        color: white;
+        margin-right: 1rem;
+    }
+
+    .site-navbar-title {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 60px;
     }
 
     main {
